--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="./index.html" class="logo">Web<span
                             class="logo-text-second">Studio</span></a>
 
-                    <ul class="main-nav__list list">
+                    <ul class="list main-nav__list">
                         <li class="main-nav__item"><a href="./index.html" class="main-nav__link main-nav__link--current">Студия</a> </li>
                         <li class="main-nav__item"><a href="./portfolio.html" class="main-nav__link">Портфолио</a> </li>
                         <li class="main-nav__item"><a href="" class="main-nav__link">Контакты</a> </li>
