--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <!--Верх сторінки-->
+    <!--
     <header class="page--header">
         <div class="container page--header__container">
                 <nav class="main--nav">
@@ -51,7 +52,7 @@
             </div>
         </section>
 
-        <!--Under Hero section-->
+        <!-- Under Hero section-->
 
         <section class="feature">
             <div class="container">
@@ -109,7 +110,7 @@
                     <h2 class="title">Наша команда</h2>
                     <ul class="list team__list">
                         <li class="team__item">
-                            <img src="./images/ihor.jpg" alt="Игорь Демьяненко" width="270" height="260" />
+                            <img class="team__img" src="./images/ihor.jpg" alt="Игорь Демьяненко" width="100%"  />
                                 <div class="team__box">
                                     <h3 class="team__name "> Игорь Демьяненко</h3>
                                     <p class="team__position">Product Designer</p>
@@ -144,7 +145,7 @@
                                 </div>
                         </li>
                         <li class="team__item">
-                            <img src="./images/olha.jpg" alt="Ольга Репина" width="270" height="260" />
+                            <img class="team__img" src="./images/olha.jpg" alt="Ольга Репина" width="100%"  />
                                 <div class="team__box">
                                     <h3 class="team__name"> Ольга Репина </h3>
                                     <p class="team__position">Frontend Developer</p>
@@ -179,7 +180,7 @@
 
                         </li>
                         <li class="team__item">
-                            <img src="./images/nikolaj.jpg" alt="Николай Тарасов" width="270" height="260" />
+                            <img class="team__img" src="./images/nikolaj.jpg" alt="Николай Тарасов" width="100%" />
                                 <div class="team__box">
                                     <h3 class="team__name"> Николай Тарасов </h3>
                                     <p class="team__position">Marketing</p>
@@ -213,7 +214,7 @@
                                 </div>
                         </li>
                         <li class="team__item">
-                            <img src="./images/mihael.jpg" alt="Михаил Ермаков" width="270" height="260" />
+                            <img class="team__img" src="./images/mihael.jpg" alt="Михаил Ермаков" width="100%"/>
                                 <div class="team__box">
                                     <h3 class="team__name"> Михаил Ермаков </h3>
                                         <p class="team__position">UI Designer</p>
@@ -299,8 +300,10 @@
 
     </main>
     <!--Підвал сторінки-->
+   
     <footer class="footer">
         <div class="container container--join">
+        <div class="container--space">
             <div class="container--colone">
                 <a href="./index.html" class="logo">Web<span class="logo__text--second--down ">Studio</span></a>
         
@@ -342,6 +345,7 @@
                             </li>
                     </ul>
             </div>
+        </div>
                 <div class="container--colthree">
                     <form action="#" class="footer--form">
                         <p class="footer--form__gap footer--form__text">Подпишитесь на рассылку</p> 
@@ -361,7 +365,7 @@
                 </div>    
         </div>
     </footer>
-
+<!--
     <div class="modal is-hidden" id="modal" data-modal>
         <div class="content" id="content">
                         <button class="btnclose" data-modal-close type="button">
@@ -408,7 +412,7 @@
         </form>
         </div>
     </div>
-
+-->
 
     <script src="./js/modal.js"></script>
 </body>
